--- a/src/ventanas/infoEmpresa.form
+++ b/src/ventanas/infoEmpresa.form
@@ -169,6 +169,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="HOMBRES"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="150" y="400" width="210" height="50"/>
